# qt-google-analytics-collector

./: CMakeLists.txt  README.md  ganalytics.hpp  main.cpp
